# Keepix

./: .env.example  .gitignore  README.md  design.md  generate_installer_assets.py  package-lock.json  package.json
docs/: architecture.md  getting-started.md  installer-guide.md  internationalization.md  photo-editing.md  video-support.md
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  keepix-updater.key  keepix-updater.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/keepix_core/: Cargo.toml
src-tauri/keepix_core/src/: ai.rs  cache.rs  db.rs  lib.rs  metadata.rs  thumbnail.rs
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  metadata.rs  scanner.rs  thumbnail.rs
src/lib/: types.ts
src/lib/components/: AboutModal.svelte  AiCullModal.svelte  BeforeAfterSlider.svelte  CategoryBadge.svelte  DiagnosticsCanvas.svelte  EditPanel.svelte  ExportModal.svelte  GridView.svelte  HelpModal.svelte  Histogram.svelte  KeyboardShortcutsModal.svelte  MenuBar.svelte  MetadataPanel.svelte  PreviewView.svelte  ProgressBar.svelte  SettingsModal.svelte  Sidebar.svelte  SplitPane.svelte  Toolbar.svelte  VideoPlayer.svelte
src/lib/i18n/: index.ts
src/lib/services/: image-cache.ts  image-editor.ts  tauri-bridge.ts  video-processor.ts
src/lib/stores/: media.ts  project.ts  toast.ts  ui.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/cull/: +page.svelte
static/: LICENSE.txt
