[package]
name = "keepix-app"
version = "0.1.0"
description = "A fast, lightweight photo & video culling application"
authors = ["Keepix Contributors"]
edition = "2021"

[lib]
name = "keepix_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff"] }
fast_image_resize = { version = "4", features = [] }

# EXIF metadata
kamadak-exif = "0.5"

# File system
walkdir = "2"

# Parallelism
rayon = "1.10"

# Async
tokio = { version = "1", features = ["fs", "sync"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"
