[package]
name = "keepix_core"
version = "4.1.0"
edition = "2021"
description = "Core photo & video culling engine logic for Keepix"
authors = ["Keepix Contributors"]

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff"] }
fast_image_resize = { version = "4", features = [] }

# EXIF metadata
kamadak-exif = "0.5"

# File system
walkdir = "2"

# Parallelism
rayon = "1.10"

# Async
tokio = { version = "1", features = ["fs", "sync"] }

# Caching & encoding
lru = "0.12"
base64 = "0.22"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
log = "0.4"

# ONNX Runtime & Machine Learning
ort = { version = "2.0.0-rc.9", features = ["copy-dylibs", "load-dynamic"] }
ndarray = "0.17"

# Network client for downloading model files
reqwest = { version = "0.12", features = ["blocking", "stream", "json"] }

